// // EntryInfo contains info on log entries.
//type EntryInfo struct {
//	ClusterID uint64
//	NodeID    uint64
//	Index     uint64
//}
//
//// SnapshotInfo contains info of the snapshot.
//type SnapshotInfo struct {
//	ClusterID uint64
//	NodeID    uint64
//	From      uint64
//	Index     uint64
//}
//
//// ConnectionInfo contains info of the connection.
//type ConnectionInfo struct {
//	Address            string
//	SnapshotConnection bool
//}

syntax = "proto3";
package raft;

option go_package = "github.com/mxplusb/pleiades/api/v1/raft";

import "google/protobuf/timestamp.proto";

enum EventType {
  LOG_ENTRY = 0;
  SNAPSHOT = 1;
  CONNECTION = 2;
  HOST = 3;
  NODE = 4;
}

enum Event {
    CONNECTION_ESTABLISHED = 0;
    CONNECTION_FAILED = 1;
    LOG_COMPACTED = 2;
    LOGDB_COMPACTED = 3;
    MEMBERSHIP_CHANGED = 4;
    NODE_HOST_SHUTTING_DOWN = 5;
    NODE_READY = 6;
    NODE_UNLOADED = 7;
    SEND_SNAPSHOT_ABORTED = 8;
    SEND_SNAPSHOT_COMPLETED = 9;
    SEND_SNAPSHOT_STARTED = 10;
    SNAPSHOT_COMPACTED = 11;
    SNAPSHOT_CREATED = 12;
    SNAPSHOT_RECEIVED = 13;
    SNAPSHOT_RECOVERED = 14;
}

message RaftEvent {
  EventType typ = 1;
  Event action = 2;
  google.protobuf.Timestamp timestamp = 3;
  oneof event {
    RaftLogEntryEvent log_entry = 4;
    RaftSnapshotEvent snapshot = 5;
    RaftConnectionEvent connection = 6;
    RaftNodeEvent node = 7;
    RaftHostShutdown host_shutdown = 8;
  }
}

message RaftLogEntryEvent {
  uint64 shard_id = 1;
  uint64 replica_id = 2;
  uint64 index = 3;
}

message RaftSnapshotEvent {
  uint64 shard_id = 1;
  uint64 replica_id = 2;
  uint64 from_index = 3;
  uint64 to_index = 4;
}

message RaftConnectionEvent {
  string address = 1;
  bool is_snapshot = 2;
}

message RaftNodeEvent {
  uint64 shard_id = 1;
  uint64 replica_id = 2;
}

message RaftHostShutdown {}